--- a/app/ui/custom.module.css
+++ b/app/ui/custom.module.css
@@ -9,3 +9,14 @@
     color: black;
     font-weight: 700;
 }
+.absoluteOverlay{
+    position:absolute;
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff86;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
