--- a/app/ui/custom.module.css
+++ b/app/ui/custom.module.css
@@ -23,3 +23,38 @@
 .svgLogos{
     width:50px;
 }
+.waves{
+    transition-duration: 300ms;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+.wavesBottom{
+    transition-duration: 300ms;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+.wavesTopSpan{
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    border-radius: 50%;
+    border-top: 1px solid #000;
+}
+.wavesBottomSpan{
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    border-radius: 50%;
+    border-top: none;
+    border-bottom: 1px solid #000;
+}
