--- a/app/ui/custom.module.css
+++ b/app/ui/custom.module.css
@@ -46,7 +46,7 @@
     position: absolute;
     left: 0;
     border-radius: 50%;
-    border-top: 1px solid #000;
+    border-top: 1px solid #ffffff;
 }
 .wavesBottomSpan{
     display: block;
@@ -56,7 +56,7 @@
     left: 0;
     border-radius: 50%;
     border-top: none;
-    border-bottom: 1px solid #000;
+    border-bottom: 1px solid #ffffff;
 }
 @keyframes btnWavesSmTop {
     from {
