--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,19 @@ body {
     text-wrap: balance;
   }
 }
+.custom-progress-bar{
+  width: 100%;
+  height: 4px;
+}
+.custom-progress-bar::-webkit-progress-bar {
+  background-color: #f3f4f688; 
+}
+
+.custom-progress-bar::-webkit-progress-value {
+  background-color: #000000; 
+}
+
+.custom-progress-bar::-moz-progress-bar {
+  background-color: #000000;
+}
+
