--- a/app/globals.css
+++ b/app/globals.css
@@ -34,11 +34,11 @@ body {
 }
 
 .custom-progress-bar::-webkit-progress-value {
-  background-color: #000000; 
+  background-color: #ffffff; 
   transition: width 0.3s ease-in-out;
 }
 
 .custom-progress-bar::-moz-progress-bar {
-  background-color: #000000;
+  background-color: #ffffff;
 }
 
